# cmake_question_2

./: CMakeLists.txt  README.md  dummy.cpp  project.cmake
